--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <p>Aqui irei apresentar alguns de meus desenhos preferidos</p>
     
     <li>1 DESENHO: O Castelo Animado</li>
-    <img src="NEWTON1.jpg" alt="logo do Newton">
-    <a href="segunda.html" target="_blank">Horário de segunda-feira dia 26/02</a>
+    <img src="bc97b2086857c0f7461b4b5af4fabc47.jpg" alt="capa do filme">
+    <a href="https://youtu.be/iM9pZ01J7Lc?si=gb6QVb1S4kXs3bB0" target="_blank">Clique aqui para assitir ao trailer</a>
     <li>2 DESENHO: Monster Higth</li>
     <a href="terca.html" target="_blank">Horário de terça-feira dia 27/02</a>
     <img src="NEWTON2.jpg" alt="foto do Newton"> 
