--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <img src="bc97b2086857c0f7461b4b5af4fabc47.jpg" alt="capa do filme">
     <a href="https://youtu.be/iM9pZ01J7Lc?si=gb6QVb1S4kXs3bB0" target="_blank">Clique aqui para assitir ao trailer</a>
     <li>2 DESENHO: Monster Higth</li>
+    <img src="44970983e1376e956181d56e06fa771d.jpg" alt="capa do filme"> 
     <a href="terca.html" target="_blank">Horário de terça-feira dia 27/02</a>
-    <img src="NEWTON2.jpg" alt="foto do Newton"> 
     <li>3 DESENHO: Tom e Jerry/li>
     <a href="quarta.html" target="_blank">Horário de quarta-feira dia 27/02</a>
     <img src="BARAO1.png" alt="logo do barão">
