--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <li>1 DESENHO: O Castelo Animado</li>
     <img src="bc97b2086857c0f7461b4b5af4fabc47.jpg" alt="capa do filme">
     <a href="https://youtu.be/iM9pZ01J7Lc?si=gb6QVb1S4kXs3bB0" target="_blank">Clique aqui para assitir ao trailer</a>
-    <li>2 DESENHO: Monster Higth</li>
+    <li>2 DESENHO: Monster High</li>
     <img src="44970983e1376e956181d56e06fa771d.jpg" alt="capa do filme"> 
-    <a href="terca.html" target="_blank">Horário de terça-feira dia 27/02</a>
+    <a href="https://youtu.be/8QeNINePQAY?feature=shared" target="_blank">Trailer do filme Monster High Friday nigth friday</a>
     <li>3 DESENHO: Tom e Jerry/li>
     <a href="quarta.html" target="_blank">Horário de quarta-feira dia 27/02</a>
     <img src="BARAO1.png" alt="logo do barão">
