--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <p>Aqui irei apresentar alguns de meus desenhos preferidos</p>
     
     <li>1 DESENHO: O Castelo Animado</li>
-    <img src="bc97b2086857c0f7461b4b5af4fabc47.jpg" alt="capa do filme">
+    <img src="bc97b2086857c0f7461b4b5af4fabc47.jpg" alt="capa do desenho">
     <a href="https://youtu.be/iM9pZ01J7Lc?si=gb6QVb1S4kXs3bB0" target="_blank">Clique aqui para assitir ao trailer</a>
     <li>2 DESENHO: Monster High</li>
-    <img src="44970983e1376e956181d56e06fa771d.jpg" alt="capa do filme"> 
-    <a href="https://youtu.be/8QeNINePQAY?feature=shared" target="_blank">Trailer do filme Monster High Friday nigth friday</a>
-    <li>3 DESENHO: Tom e Jerry/li>
-    <a href="quarta.html" target="_blank">Horário de quarta-feira dia 27/02</a>
-    <img src="BARAO1.png" alt="logo do barão">
+    <img src="44970983e1376e956181d56e06fa771d.jpg" alt="capa do desenho"> 
+    <a href="https://youtu.be/8QeNINePQAY?feature=shared" target="_blank">Trailer do desenho Monster High Friday nigth friday</a>
+    <li>3 DESENHO: Hazbin Hotel/li>
+    <img src="e6f9465f39d1d5feb535cbad876d698d.jpg" alt="capa do desenho">
+    <a href="https://youtu.be/zVMsYqD5BH0?si=ci33aftm6NFUDN_A" target="_blank">Trailer do desenho</a>
     <li>4 DESENHO: Castelo rá tim bum</li>
     <a href="quinta.html" target="_blank">Horário de quinta-feira dia 27/02</a>
     <img src="BARAO2.jpg" alt="foto do Barão">
