--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <img src="e6f9465f39d1d5feb535cbad876d698d.jpg" alt="capa do desenho">
     <a href="https://youtu.be/zVMsYqD5BH0?si=ci33aftm6NFUDN_A" target="_blank">Trailer do desenho</a>
     <li>4 DESENHO: Castelo rá tim bum</li>
+    <img src="4f823f822fada9489b606a6623e4dd34.jpg" alt="capa do desenho">
     <a href="quinta.html" target="_blank">Horário de quinta-feira dia 27/02</a>
-    <img src="BARAO2.jpg" alt="foto do Barão">
     <li>5 DESENHO</li>
     <a href="sexta.html" target="_blank">Horário de sexta-feira dia 27/02</a>
     
