--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
     <title></title>
+    <style>
+        body {
+            backgroud-color:linear-gradient(to rigth black,purple,pink);
+            text-aling:center;
+        }
+    </style>
 </head>
 <body>
     <h1> MEUS TOP 5 DESENHOS PREFERIDOS</h1>
