--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
         body {
             backgroud-color:linear-gradient(to rigth black,purple,pink);
             text-aling:center;
-        }
+               }
+        h1,
+        h2,
+        a{
+            color:black;
+            font-size:30px;
+            text-aling:center;
+            aling-center;
     </style>
 </head>
 <body>
