--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
             color:black;
             font-size:30px;
             text-aling:center;
-            aling-center;
+            aling-items:center;
+        }
+        a{
+            color:black;
+            
     </style>
 </head>
 <body>
