--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             aling-items:center;
         }
         a{
+            text-decoration:libel suit;
             color:black;
             
     </style>
