--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title></title>
     <style>
         body {
-            backgroud-color:linear-gradient(to rigth black,purple,pink);
+            backgroud-color:linear-gradient(to rigth,black,purple,pink);
             text-aling:center;
-               }
+        }
         h1,
         h2,
         a{
