--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <li>2 DESENHO: Monster High</li>
     <img src="44970983e1376e956181d56e06fa771d.jpg" alt="capa do desenho"> 
     <a href="https://youtu.be/8QeNINePQAY?feature=shared" target="_blank">Trailer do desenho Monster High Friday nigth friday</a>
-    <li>3 DESENHO: Hazbin Hotel/li>
+    <li>3 DESENHO: Hazbin Hotel</li>
     <img src="e6f9465f39d1d5feb535cbad876d698d.jpg" alt="capa do desenho">
     <a href="https://youtu.be/zVMsYqD5BH0?si=ci33aftm6NFUDN_A" target="_blank">Trailer do desenho</a>
     <li>4 DESENHO: Castelo rá tim bum</li>
