--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
     <title></title>
     <style>
-        body {
-            backgroud-color:linear-gradient(to rigth,black,purple,pink);
-            text-aling:center;
+        <style>
+       body {
+            background-image:linear-gradient(to black,purple,pink);
+           text-align:center;
         }
         h1,
         h2,
         a{
             color:black;
             font-size:30px;
-            text-aling:center;
-            aling-items:center;
+            text-align:center;
+            align-items:center;
         }
         a{
-            text-decoration:libel suit;
-            color:black;
-            
+            text-decoration:none;
+            color:blue;
+        }
     </style>
 </head>
 <body>
