--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title></title>
     <style>
           body {
-            background-image:linear-gradient(to black,purple,pink);
+            background-image:linear-gradient(to purple,pink);
            text-align:center;
         }
         h1,
